--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,9 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "uuid": "^9.0.1",
-    "winston": "^3.11.0"
+    "winston": "^3.11.0",
+    "firebase-admin": "^11.10.1",
+    "firebase-functions": "^4.3.1"
   },
   "devDependencies": {
     "jest": "^29.7.0",
