--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,4 +1,5 @@
-REACT_APP_API_URL=https://rssb-sewadar-management.cloudfunctions.net
+REACT_APP_API_URL=https://us-central1-rssb-sewadar-management.cloudfunctions.net/api
 NODE_ENV=production
 REACT_APP_APP_NAME=RSSB Sewadar Portal
 REACT_APP_VERSION=1.0.0
+GENERATE_SOURCEMAP=false
