--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,6 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "better-sqlite3": "^9.4.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -24,12 +23,11 @@
     "helmet": "^7.1.0",
     "joi": "^17.12.1",
     "jsonwebtoken": "^9.0.2",
+    "pg": "^8.11.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "uuid": "^9.0.1",
-    "winston": "^3.11.0",
-    "firebase-admin": "^11.10.1",
-    "firebase-functions": "^4.3.1"
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "jest": "^29.7.0",
