--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,9 @@
     "helmet": "^7.1.0",
     "joi": "^17.12.1",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.11.3",
+    "pg": "^8.16.3",
+    "pg-connection-string": "^2.9.1",
+    "pg-pool": "^3.10.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "uuid": "^9.0.1",
