--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,4 +1,4 @@
-REACT_APP_API_URL=https://rssb-portal-production.up.railway.app/api
+REACT_APP_API_URL=https://rssb-portal-production.up.railway.app
 NODE_ENV=production
 REACT_APP_APP_NAME=RSSB Sewadar Portal
 REACT_APP_VERSION=1.0.0
